--- a/source/scss/_variables.scss
+++ b/source/scss/_variables.scss
@@ -10,4 +10,5 @@
   @include k.darkMode;
   // Customize your darkmode variable states and styling here.
   --fontColor: white;
+  --borderColor: grey;
 }
