--- a/source/scss/components/_nav.scss
+++ b/source/scss/components/_nav.scss
@@ -24,7 +24,7 @@
     font-style:normal;
     border:2px solid transparent;
     margin:0 0 -1px;
-    background-color:var(--backColor);
+    background-color:transparent;
     border-radius:4px 4px 0 0;
     box-shadow:none;
     font-size:13px;
