--- a/source/views/_stats.pug
+++ b/source/views/_stats.pug
@@ -1,2 +1,3 @@
 article#character.character-stats 
-    include ../components/_header.pug
+    include ../components/_statheader.pug
+    include ../components/_attributes.pug
