--- a/source/scss/_variables.scss
+++ b/source/scss/_variables.scss
@@ -6,6 +6,8 @@
   --bodyColor: rgb(219, 84, 43);
   --mindColor: rgb(79, 76, 238);
   --spiritColor: rgb(247, 243, 22);
+  --speedColor: rgb(149, 80, 141);
+  --willpowerColor: rgb(111, 204, 58);
   --fillLeftUnselectedColor: transparent;
   --fontColor: black;
   --borderColor: rgb(73, 73, 73);
