--- a/source/components/_pipFill.pug
+++ b/source/components/_pipFill.pug
@@ -1,20 +1,20 @@
-mixin pipFill(name, affectsList, maxSize)
+mixin pipFill(name, affectsList, maxSize, additiveList, limiterStat)
     - var valuesArray = [];
     - var i = 0;
     while i < maxSize 
         - valuesArray[i] = i + 1;
         - i = i + 1;
-    .attribute-container 
+    .pips-container 
         h5 #{name}
         +fillLeft({
             radioObj:{name:name},
-            divObj:{class:'attribute-fill'},
+            divObj:{class:'pip-fill'},
             valueArray:valuesArray,
             trigger:{affects:`${affectsList}`},
             noClear:false
         })
 
 +scss.
-    .attribute-container {
+    .pips-container {
         justify-items: center;
     }
