--- a/source/views/_stats.pug
+++ b/source/views/_stats.pug
@@ -1,3 +1,4 @@
 article#character.character-stats 
     include ../components/_statheader.pug
     include ../components/_attributes.pug
+    include ../components/_pools.pug
