Basic autoscale working

--- a/source/components/_attributes.pug
+++ b/source/components/_attributes.pug
@@ -8,4 +8,4 @@ include ./_pipFill.pug
         {attribute: 'spirit', affectsList: ['willpower']},
     ];
   each attr in attributeArray
-    +pipFill(attr.attribute, attr.affectsList, 5, null, null)
+    +pipFill(attr.attribute, attr.affectsList, 5, null)
