--- a/source/components/_pipFill.pug
+++ b/source/components/_pipFill.pug
@@ -1,4 +1,4 @@
-mixin pipFill(name, affectsList, maxSize, additiveList, limiterStat)
+mixin pipFill(name, affectsList, maxSize, pFormula)
     - var valuesArray = [];
     - var i = 0;
     while i < maxSize 
@@ -7,13 +7,12 @@ mixin pipFill(name, affectsList, maxSize, additiveList, limiterStat)
     .pips-container 
         h5 #{name}
         +fillLeft({
-            radioObj:{name:name},
+            radioObj:{name:name,trigger:{affects:affectsList,calculation:'calcNewValue',formula:pFormula}},
             divObj:{class:'pip-fill'},
             valueArray:valuesArray,
-            trigger:{affects:`${affectsList}`},
             noClear:false
         })
-
+    
 +scss.
     .pips-container {
         justify-items: center;
