--- a/source/components/_pools.pug
+++ b/source/components/_pools.pug
@@ -2,8 +2,8 @@ include ./_pipFill.pug
 .pools-view 
     -
         const poolsArray = [
-            {pool: 'speed', additivePool: ['body', 'mind']},
-            {pool: 'willpower', additivePool: ['mind', 'spirit']},
+            {pool: 'speed', additivePool: `body,mind`},
+            {pool: 'willpower', additivePool: `mind,spirit`},
         ];
     each pool in poolsArray
-        +pipFill(pool.pool, '[]', 10, pool.additivePool, null)
+        +pipFill(pool.pool, '[]', 10, pool.additivePool)
