--- a/source/javascript/_index.pug
+++ b/source/javascript/_index.pug
@@ -1,2 +1,4 @@
 //- Include your generic javascript files that are not associated with a specific component/view here.
 //- include ./example-include.js
+include ./calculators.js
+include ./triggeredfuncs.js
