--- a/source/scss/components/_fillleft.scss
+++ b/source/scss/components/_fillleft.scss
@@ -11,4 +11,9 @@
     .fill-left__radio:checked {
         background-color: transparent;
     }
+
+}
+
+.fill-left.disable-checkbox.disable-checkbox.disable-checkbox.disable-checkbox {
+    display: none
 }
