--- a/source/views/_stats.pug
+++ b/source/views/_stats.pug
@@ -2,3 +2,4 @@ article#character.character-stats
     include ../components/_statheader.pug
     include ../components/_attributes.pug
     include ../components/_pools.pug
+    include ../components/_skills.pug
