Changed specific types to text input

--- a/source/components/_focusedSkill.pug
+++ b/source/components/_focusedSkill.pug
@@ -52,6 +52,8 @@ mixin focusedSkill(focusedSkillCategory)
             padding-bottom: 1px;
             input {
                 border: 1px dashed var(--borderColor);
+                width: 4em;
+                text-align: center;
             }
             input:disabled {
                 border: 0px dashed var(--borderColor);
