--- a/source/components/_specific-label.pug
+++ b/source/components/_specific-label.pug
@@ -2,6 +2,5 @@ mixin specific-label(labelName)
     - var focusName = labelName.split('S-')[1]
     +input-label({
         label:focusName.charAt(0).toUpperCase() + focusName.slice(1) + "*",
-        inputObj:{name:focusName,type:'number'}
+        inputObj:{name:focusName,type:'text'}
     })
-    //TODO: Hover-over pop-up for adding specific ones?
