silly relative position hit die (try a custom mixin)

--- a/source/components/_focusedSkill.pug
+++ b/source/components/_focusedSkill.pug
@@ -50,6 +50,8 @@ mixin focusedSkill(focusedSkillCategory)
             color: var(--textColor);
             padding-top: 1px;
             padding-bottom: 1px;
+            display: inline-flex;
+            flex-direction: column-reverse !important;
             input {
                 border: 1px dashed var(--borderColor);
                 width: 4em;
