--- a/source/views/_stats.pug
+++ b/source/views/_stats.pug
@@ -3,3 +3,4 @@ article#character.character-stats
     include ../components/_attributes.pug
     include ../components/_pools.pug
     include ../components/_skills.pug
+    include ../components/_statfooter.pug
