Added min/max input

--- a/source/components/_statsHp.pug
+++ b/source/components/_statsHp.pug
@@ -1,3 +1,4 @@
+include ./_minMaxInput.pug
 .hp-section
     +input-label({
         label:'HP Max',
@@ -9,18 +10,12 @@
         inputObj:{name:'hp-curr',type:'number'},
         spanObj:{role:'heading','aria-level':5,class:'leftLabel'}
     })
-    +input-label({
-        label:'Hit Die',
-        inputObj:{class:"double-input di-right",name:'hit-die-max',type:'number'},
-        spanObj:{role:'heading','aria-level':5,class:'leftLabel'}
-    })
+    +minMaxInput('Hit Die','hit-die')
     +input-label({
         label:'Regenerate',
         inputObj:{name:'regen',type:'text'},
         spanObj:{role:'heading','aria-level':5,class:'big-leftLabel'}
     })
-    +input({class:"double-input di-left", name:'hit-die-current',type:'text'})
-    h4 /
 +scss.
     .hp-section.hp-section.hp-section {
         width: 100%;
@@ -43,20 +38,5 @@
         .double-input.double-input {
             width: 1.5em;
             z-index: 3;
-        }
-
-        .di-left {
-            padding: 2px;
-            position: relative;
-            line-height: normal;
-            top: -3.25em;
-            left: 9em;
-        }
-
-        h4 {
-            position: relative;
-            line-height: normal;
-            top: -3.25em;
-            left: 3em;
         }
     }
