--- a/source/scss/_variables.scss
+++ b/source/scss/_variables.scss
@@ -8,6 +8,8 @@
   --spiritColor: rgb(247, 243, 22);
   --speedColor: rgb(149, 80, 141);
   --willpowerColor: rgb(111, 204, 58);
+  --humanityColor: rgb(161, 211, 196);
+  --hungerColor: rgb(219, 43, 87);
   --bodyColorSecondary: rgb(219, 114, 43);
   --mindColorSecondary: rgb(79, 106, 238);
   --spiritColorSecondary: rgb(247, 213, 22);
