Removed annoying white space

--- a/source/components/_statfooter.pug
+++ b/source/components/_statfooter.pug
@@ -13,5 +13,6 @@
         justify-items: center;
         box-sizing: border-box;
         position: relative;
+        padding-bottom: 10px;
     }
 
