--- a/source/components/_statsHumanity.pug
+++ b/source/components/_statsHumanity.pug
@@ -28,6 +28,8 @@ include ./_pipFill.pug
 
         .input-label {
             width: 49%;
+            position: relative;
+            left: 1%;
         }
 
         .input-label__input {
