--- a/source/scss/components/_nav.scss
+++ b/source/scss/components/_nav.scss
@@ -10,7 +10,8 @@
   flex-wrap:wrap;
   align-items: center;
   gap: var(--tiny-gap);
-  position:sticky;
+  position:relative;
+  top: -50px;
   background-color:var(--backColor);
   padding:var(--tiny-gap) 0 0;
   border-bottom:1px solid #dddddd;
