Added toggle to Pride

--- a/source/Devilry_(V1).pug
+++ b/source/Devilry_(V1).pug
@@ -10,7 +10,7 @@ main#main-nav
     +tab({name:'statistics',container:'article',button:{content:'Stats &nbsp;&nbsp;&nbsp;'},trigger:{listenerFunc:'navigateSheet'},active:true})
       include ./views/_stats.pug
     +tab({name:'info',container:'article',button:{content:'Info &nbsp;&nbsp;&nbsp;'},trigger:{listenerFunc:'navigateSheet'}})
-      //include ./views/_abilities.pug
+      include ./views/_info.pug
     +tab({name:'domains',container:'article',button:{content:'Domains &nbsp;&nbsp;'},trigger:{listenerFunc:'navigateSheet'}})
       include ./views/_index.pug
     +tab({name:'settings',button:{content:'Settings &nbsp;&nbsp;'},container:'article',trigger:{listenerFunc:'navigateSheet'}})
