--- a/source/components/_statfooter.pug
+++ b/source/components/_statfooter.pug
@@ -13,6 +13,6 @@
         justify-items: center;
         box-sizing: border-box;
         position: relative;
-        padding-bottom: 10px;
+        //padding-bottom: 10px;
     }
 
