--- a/source/scss/components/_nav.scss
+++ b/source/scss/components/_nav.scss
@@ -14,9 +14,9 @@
   top: -50px;
   background-color:var(--backColor);
   padding:var(--tiny-gap) 0 0;
-  border-bottom:1px solid #dddddd;
-	z-index:999;
-	box-shadow:30px 0 var(--backColor),-30px 0 var(--backColor);
+  //border-bottom:1px solid #dddddd;
+  z-index:999;
+  box-shadow:30px 0 var(--backColor),-30px 0 var(--backColor);
   color:var(--fontColor);
   box-sizing:border-box !important;
 }
