Changed check icon

--- a/source/scss/_variables.scss
+++ b/source/scss/_variables.scss
@@ -16,6 +16,7 @@
   --fillLeftUnselectedColor: transparent;
   --fontColor: black;
   --borderColor: rgb(73, 73, 73);
+  --checkContent: '✗';
 
   --infoPageDefaultHeight: 6em;
   --infoPageLargeHeight: calc(var(--infoPageDefaultHeight) * 1.8);
