--- a/source/views/_info.pug
+++ b/source/views/_info.pug
@@ -35,8 +35,6 @@ article#info.info-header
             padding-bottom: 0px;
         }
 
-
-
         input {
             width: 100%;
         }
@@ -53,6 +51,7 @@ article#info.info-header
                 justify-content: start;
                 text-align: left;
                 width: 100%;
+                height: 100%;
                 color: var(--fontColor);
                 border: 2px dashed var(--borderColor);
                 border-radius: 2px;
