--- a/source/views/_info.pug
+++ b/source/views/_info.pug
@@ -53,8 +53,9 @@ article#info.info-header
                 width: 100%;
                 height: 100%;
                 color: var(--fontColor);
-                border: 2px dashed var(--borderColor);
+                border: 2px solid var(--borderColor);
                 border-radius: 2px;
+                resize: none;
             }
             
             h5 {
