Initial Domains Added

--- a/source/Devilry_(V1).pug
+++ b/source/Devilry_(V1).pug
@@ -12,7 +12,7 @@ main#main-nav
     +tab({name:'info',container:'article',button:{content:'Info &nbsp;&nbsp;&nbsp;'},trigger:{listenerFunc:'navigateSheet'}})
       include ./views/_info.pug
     +tab({name:'domains',container:'article',button:{content:'Domains &nbsp;&nbsp;'},trigger:{listenerFunc:'navigateSheet'}})
-      include ./views/_index.pug
+      include ./views/_domains.pug
     +tab({name:'settings',button:{content:'Settings &nbsp;&nbsp;'},container:'article',trigger:{listenerFunc:'navigateSheet'}})
       include ./views/_index.pug
 //- An input to contain template fields that should always be output with a roll.
