--- a/source/views/_info.pug
+++ b/source/views/_info.pug
@@ -56,6 +56,7 @@ article#info.info-header
                 border: 2px solid var(--borderColor);
                 border-radius: 2px;
                 resize: none;
+                scrollbar-width: none;
             }
             
             h5 {
