Minor Domain Format Updates

--- a/source/views/_domains.pug
+++ b/source/views/_domains.pug
@@ -34,6 +34,7 @@ article#domains.domains-header
         overflow-y: auto;
         overflow-x: clip;
         scrollbar-width: none;
+        align-content: baseline;
     }
 
     .Domain1,.Domain4{
