--- a/source/components/_domainAbilityDetails.pug
+++ b/source/components/_domainAbilityDetails.pug
@@ -14,7 +14,7 @@ mixin domainExpandedDetails(initialLabel, discriminator)
         +text({name:'duration',class:'domain-details span-4',placeholder:'Duration'})
         +text({name:'pool',class:'domain-details span-4',placeholder:'Pool'})
         +text({name:'opp-pool',class:'domain-details span-4',placeholder:'Opposed Pool'})
-        +adaptiveTextarea({name:'description',class:'underlined'})
+        +adaptiveTextarea({name:'description',class:'underlined domain-details'})
 
 +scss.
     .domain-collapsed-details,.domain-expanded-details {
@@ -26,6 +26,10 @@ mixin domainExpandedDetails(initialLabel, discriminator)
             padding-left: 5px;
             align-content: center;
             color: var(--accentFontColor)
+        }
+
+        textarea.domain-details {
+            font-size: small;
         }
 
         .adaptive {
@@ -40,5 +44,4 @@ mixin domainExpandedDetails(initialLabel, discriminator)
         .span-2 {
             grid-column-start: span 2;
         }
-
     }
