Added Descriptions Page!

--- a/source/components/_domainsHeader.pug
+++ b/source/components/_domainsHeader.pug
@@ -27,7 +27,7 @@ header(data-i18n-aria-label='info header')#info-header.header.span-all
 +scss.
     input.domains.bigin {
         padding-top: 0px !important;
-        border: 2px dashed red;
+        border: 2px dashed var(--bloodRed);
         height: 100%;
     }
     .info-header-details {
