--- a/source/scss/_variables.scss
+++ b/source/scss/_variables.scss
@@ -16,6 +16,7 @@
   --bodyColorTertiary: rgb(145, 135, 135);
   --mindColorTertiary: rgb(135, 135, 145);
   --spiritColorTertiary: rgb(145, 145, 135);
+  --bloodRed: red;
   --fillLeftUnselectedColor: transparent;
   --fontColor: black;
   --accentFontColor: rgb(53, 53, 53);
