--- a/source/Devilry_(V1).pug
+++ b/source/Devilry_(V1).pug
@@ -13,8 +13,8 @@ main#main-nav
       include ./views/_info.pug
     +tab({name:'domains',container:'article',button:{content:'Domains &nbsp;&nbsp;'},trigger:{listenerFunc:'navigateSheet'}})
       include ./views/_domains.pug
-    +tab({name:'settings',button:{content:'Settings &nbsp;&nbsp;'},container:'article',trigger:{listenerFunc:'navigateSheet'}})
-      include ./views/_index.pug
+    +tab({name:'appearance',button:{content:'Descriptions &nbsp;&nbsp;'},container:'article',trigger:{listenerFunc:'navigateSheet'}})
+      include ./views/_appearance.pug
 //- An input to contain template fields that should always be output with a roll.
 +hidden({name:'template start',value:`@{whisper}&{template:${templateName}} {{character_name=@{character_name}}} {{character_id=@{character_id}}}`})
 include rolltemplate/_index.pug
