--- a/source/scss/components/_headers.scss
+++ b/source/scss/components/_headers.scss
@@ -1,6 +1,6 @@
 //This file will define how our header section is laid out.
 @use '_mixinsandplaceholders';
-#character-header,#info-header{
+#character-header,#info-header,#appearance-header{
   padding-top: 5px;
   border-top: 2px solid white;
   position: relative;
