--- a/source/components/_statsHumanity.pug
+++ b/source/components/_statsHumanity.pug
@@ -17,7 +17,7 @@ include ./_pipFill.pug
         .fill-left__radio {
             background-color: var(--humanityColor);
             margin-right: 0.22rem;
-            border: 2px solid #eee;
+            border: 2px solid var(--tickBorderColor);
             height: 1.8em;
             width: 1.8em;
         }
