--- a/source/views/_appearance.pug
+++ b/source/views/_appearance.pug
@@ -14,7 +14,7 @@ article.appearances
     .appearances {
         top: -10px;
         position: relative;
-        border-top: 2px solid white;
+        border-top: 2px solid var(--tabBorderColor);
         padding-top: 5px;
         display:grid;
         gap:var(--normal-gap);
