--- a/source/components/_statsHunger.pug
+++ b/source/components/_statsHunger.pug
@@ -7,7 +7,7 @@ include ./_pipFill.pug
         .fill-left__radio {
             background-color: var(--hungerColor);
             margin-right: 0.22rem;
-            border: 2px solid #eee;
+            border: 2px solid #var(--tickBorderColor);;
             height: 1.8em;
             width: 1.8em;
         }
