Adjustments for actual R20

--- a/source/scss/components/_pools.scss
+++ b/source/scss/components/_pools.scss
@@ -11,6 +11,7 @@
     box-sizing: border-box;
 
     .pips-container {
+        height: 57px;
         .disable-checkbox.disable-checkbox.disable-checkbox.disable-checkbox {
             background:transparent;
             position:relative;
