--- a/source/scss/components/_headers.scss
+++ b/source/scss/components/_headers.scss
@@ -1,7 +1,7 @@
 //This file will define how our header section is laid out.
 @use '_mixinsandplaceholders';
 #character-header,#info-header,#appearance-header{
-  padding-top: 5px;
+  padding-top: 2px;
   border-top: 2px solid var(--tabBorderColor);
   position: relative;
   top: -10px;
@@ -44,6 +44,7 @@
       display:flex;
       font-size: smaller;
       width: 6em;
+      justify-content: center;
     }
   
     input.littlein.littlein.littlein.littlein {
