--- a/source/scss/components/_nav.scss
+++ b/source/scss/components/_nav.scss
@@ -13,7 +13,7 @@
   position:relative;
   top: -50px;
   background-color:var(--backColor);
-  padding:var(--tiny-gap) 0 0;
+  padding:2px 0 0;
   //border-bottom:1px solid #dddddd;
   z-index:999;
   box-shadow:30px 0 var(--backColor),-30px 0 var(--backColor);
