Minor CSS updates

--- a/source/components/_domainAbilityDetails.pug
+++ b/source/components/_domainAbilityDetails.pug
@@ -14,7 +14,7 @@ mixin domainExpandedDetails(initialLabel, discriminator)
         +text({name:'duration',class:'domain-details span-4',placeholder:'Duration'})
         +text({name:'pool',class:'domain-details span-4',placeholder:'Pool'})
         +text({name:'opp-pool',class:'domain-details span-4',placeholder:'Opposed Pool'})
-        +adaptiveTextarea({name:'description',class:'underlined domain-details'})
+        +adaptiveTextarea({name:'description',class:'underlined domain-details',placeholder:'Description'})
 
 +scss.
     .domain-collapsed-details,.domain-expanded-details {
