--- a/source/components/_statheader.pug
+++ b/source/components/_statheader.pug
@@ -42,13 +42,13 @@ header(data-i18n-aria-label='character header')#character-header.header.span-all
         })
         +input-label({
             label:'Nature/Demeanor',
-            inputObj:{name:'nature',class:'littlein',type:'text'},
+            inputObj:{name:'nature-demeanor',class:'littlein',type:'text'},
             divObj:{class:'span-5'},
             spanObj:{role:'heading','aria-level':5,class:'littlein'}
         })
         +input-label({
             label:'Experience Points',
-            inputObj:{name:'xp',class:'littlein',type:'number'},
+            inputObj:{name:'xp',class:'littlein centered',type:'text'},
             divObj:{class:'span-5'},
             spanObj:{role:'heading','aria-level':5,class:'littlein'}
         })
