--- a/source/scss/components/_headers.scss
+++ b/source/scss/components/_headers.scss
@@ -55,6 +55,10 @@
       border: 2px dashed var(--borderColor);
       border-radius: 2px;
     }
+
+    input.littlein.centered {
+      text-align: center;
+    }
     
     span.littlein.littlein.littlein.littlein {
       font-size:smaller;
