--- a/source/components/_domainsHeader.pug
+++ b/source/components/_domainsHeader.pug
@@ -8,7 +8,7 @@ header(data-i18n-aria-label='info header')#info-header.header.span-all
     section.info-header-details
         +input-label({
             label:'Fear Name',
-            inputObj:{name:'fear',class:'bigin domains',type:'text'},
+            inputObj:{name:'fear-name',class:'bigin domains',type:'text'},
             divObj:{class:'span-5'},
             spanObj:{role:'heading','aria-level':5,class:'bigin'}
         })
